# ChangeLog for net-misc/soledad-client
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Dec 2014; Harold Naparst <harold@alum.mit.edu>
  soledad-client-0.6.0.ebuild:
  Spelling error in description

  03 Dec 2014; Harold Naparst <harold@alum.mit.edu>
  soledad-client-0.6.0.ebuild:
  Attempt to get zope.proxy as a dependency

*soledad-client-0.6.0 (02 Dec 2014)

  02 Dec 2014; Harold Naparst <harold@alum.mit.edu>
  +soledad-client-0.6.0.ebuild, +metadata.xml:
  Add soledad-client-0.6.0 and metadata.xml
